<resources>
    <string name="app_name">cdp-android</string>
    <string name="sp_access_token">accessToken</string>

    <string name="loginPassword">Password</string>
    <string name="loginUser">Email</string>
    <string name="loginSignin">Signin</string>
    <string name="loginForgotPassword">Forgot Password?</string>

    <string name="newuserEmail">Email</string>
    <string name="newuserFirstName">First Name</string>
    <string name="newuserLastName">Last Name</string>
    <string name="newuserSignup">Signup</string>

    <string name="newpeladaCreatePelada">Create Pelada</string>

    <string name="msg_login_validate_success">User and password are valid</string>
    <string name="msg_login_empty">User and password are required</string>

    <string name="btn_save">Save</string>

    <!-- Exceptins -->
    <string name="EMAIL_ALREADY_IN_USE">Email already in use</string>
</resources>
