<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/newuserSignup"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/key_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="233dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/etLoginUser"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/loginUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/etLoginPass"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="218dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/loginPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/btnLoginSignin"
        android:layout_width="0dp"
        android:layout_height="82dp"
        android:layout_marginTop="313dp"
        android:text="@string/loginSignin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@mipmap/person_black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="167dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="sans-serif"
        android:text="@string/loginForgotPassword"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginSignin" />
</android.support.constraint.ConstraintLayout>